# http

./: .gitignore  README.md  autogen.sh  configure.ac
build-aux/: test_common.mk
m4/: fuma_ax_check_postgres_pq.m4  fuma_ax_set_postgres_directory_unless_set.m4
project/: NAME  SUPPORT_EMAIL
sources/include/: Makefile.am
sources/include/ssiloti/abnf/: core_rules.hpp
sources/include/ssiloti/http/: asterisk.hpp  async_client_connection.hpp  async_connection.hpp  async_server_connection.hpp  async_string_server.hpp  basic_async_server.hpp  basic_message.hpp  basic_request.hpp  basic_response.hpp  basic_server_impl.hpp  comment.hpp  entity_tag.hpp  headers.hpp  headers_map.hpp  media_type.hpp  status_code.hpp  string_message.hpp  uri_ops.hpp  version_number.hpp
sources/include/ssiloti/http/generators/: headers.hpp  media_type.hpp  message.hpp  request.hpp  response.hpp  string_message.hpp  version_number.hpp
sources/include/ssiloti/http/http/: asterisk.hpp  async_client_connection.hpp  async_connection.hpp  async_server_connection.hpp  basic_async_server.hpp  basic_message.hpp  basic_request.hpp  basic_response.hpp  comment.hpp  entity_tag.hpp  headers.hpp  headers_map.hpp  media_type.hpp  status_code.hpp  version_number.hpp
sources/include/ssiloti/http/http/generators/: headers.hpp  media_type.hpp  message.hpp  request.hpp  response.hpp  version_number.hpp
sources/include/ssiloti/http/http/parsers/: basic_rules.hpp  comment.hpp  entity_tag.hpp  headers.hpp  media_type.hpp  message.hpp  message_state.hpp  response.hpp
sources/include/ssiloti/http/mime/: mime.hpp
sources/include/ssiloti/http/parsers/: basic_rules.hpp  body.hpp  comment.hpp  date.hpp  entity_tag.hpp  headers.hpp  media_type.hpp  message.hpp  message_state.hpp  octet_message.hpp  request.hpp  response.hpp  string_message.hpp  version_number.hpp
sources/include/ssiloti/http/uri/: basic_authority.hpp  basic_uri.hpp  basic_uri.ipp
sources/include/ssiloti/http/uri/generators/: authority.hpp  generic_uri.hpp
sources/include/ssiloti/http/uri/parsers/: absolute_uri.hpp  authority.hpp  characters.hpp  components.hpp  generic_uri.hpp  relative_ref.hpp  segments.hpp
sources/include/ssiloti/http/vfs/: directory.hpp  node.hpp  server.hpp  static_directory.hpp  static_file.hpp
sources/include/ssiloti/uri/: basic_uri.ipp
sources/include/ssiloti/uri/parsers/: authority.hpp  components.hpp  generic_uri.hpp  segments.hpp
sources/lib/: Makefile.am
sources/src/: Makefile.am
sources/src/example/basic_message/: basic_message.cpp
sources/src/example/client/: client.cpp
sources/src/example/server/: server.cpp
sources/src/example/vfs_server/: vfs_server.cpp
tests/: Makefile.am
tests/include/: TestHelper.hpp
tests/lib/: Makefile.am  test_build.cpp
tests/src/: Makefile.am  test_basic_request.cpp  test_basic_response.cpp  test_build.cpp  test_headers.cpp  test_parser_message_state.cpp
