# sources/lib/Makefile.am

SUBDIRS = \
 .

include $(top_srcdir)/build-aux/source_common.mk

AM_LDFLAGS = $(LINKER_FLAGS)
AM_CPPFLAGS = $(COMPILE_FLAGS)

# lib_LTLIBRARIES =

# noinst_HEADERS = 

# libFumaLibrary_la_SOURCES =

# libFumaLibrary_la_LIBADD  = $(LINKER_LIBS)

MAINTAINERCLEANFILES = \
 $(top_srcdir)/sources/lib/Makefile.in
